@@ -3,6 +3,8 @@
 
                 Version 0.6-trunk
 
+# (r1918)
+ * Bugfix: fimgs to properly remove temporary directory after loading downloaded files.
 # (r1903)
  * Misc small improvements in text output and reporting (no cursor in post-search output line; misc messages).
  * Key 'Z' now assigned to 'sleep 1'.
@@ -32,7 +34,7 @@
  * Bugfix: 'autocmd_del' with no arguments would crash.
 # (r1781)
  * Bugfix: Autocommand "PostHardcodedConfigLoading" will now trigger even execute even if --disable-fimrc .
-# (r1771-r1773,r1776-r1777,r1781,r1783-r1785,r1789,r1792-r1796,r1803-r1806,r1808-r1809,r1813-r1815,r1818,r1822-r1823,r1827,r1831-r1836,r1839-r1917)
+# (r1771-r1773,r1776-r1777,r1781,r1783-r1785,r1789,r1792-r1796,r1803-r1806,r1808-r1809,r1813-r1815,r1818,r1822-r1823,r1827,r1831-r1836,r1839-r1918)
  * internal: considerably expanded 'make tests'.
 # (r1770,r1772)
  * Add command 'stderr', similar to 'stdout'.
